[package]
name = "ultra-core-processor-ai-wfo"
version = "0.1.0"
edition = "2021"
description = "RESTful API service with health monitoring"
license = "MIT"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
